# Analise_Petroleo_Brent

./: .gitignore  LINKS DO PROJETO.txt  README.md  pyproject.toml
Dashboards Powe Bi/: dashboard valor medio.pbix  dashboard variacao.pbix  previsao petroleo.pbix
app/: app.py  textos.py
app/.streamlit/: config.toml
previsao_preço/: ML_TECH_4.ipynb  base_diaria.csv
